# gpui_hn_app

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md  Taskfile.yml  config.example.ron  config.ron  config.ron.example
.github/workflows/: cd.yml  ci.yml
benches/: parsing_benchmark.rs
docs/rationale/: 0001_api_improvements_rationale.md
src/: bookmarks.rs  cache.rs  config.rs  history.rs  layout.rs  lib.rs  log_buffer.rs  main.rs  notification.rs  search.rs  state.rs  webview.rs
src/api/: mod.rs
src/internal/: events.rs  layout.rs  markdown.rs  mod.rs  models.rs  scroll.rs  webview.rs  webview_factory.rs
src/internal/ui/: bookmark_list.rs  constants.rs  header.rs  history_list.rs  keyboard_help.rs  log_viewer.rs  mod.rs  story_detail.rs  story_list.rs  theme_editor.rs  webview_controls.rs
src/state/: mod.rs
src/utils/: datetime.rs  html.rs  mod.rs  theme.rs  theme_export.rs  url.rs
tests/: html_extract.rs  integration_api.rs  proptest_models.rs  theme_toggle_test.rs
themes/: high_contrast.json
