[package]
name = "gpui-hn-app"
version = "0.8.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
comrak = "0.48.0"
futures = "0.3.31"
gpui = "0.2.2"
gpui-component = { version = "0.4.1", features = ["webview"] }
html2text = "0.16.4"
jiff = { version = "0.2.16", features = ["serde"] }
once_cell = "1.21.3"
raw-window-handle = "0.6.2"
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"] }
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }

# File watcher for efficient theme reloads
notify = "8.2.0"
