[package]
name = "gpui-hn-app"
version = "0.27.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
comrak = "0.48.0"
dirs = "6.0.0"
futures = "0.3.31"
gpui = "0.2.2"
gpui-component = { version = "0.5.0-preview2", features = ["webview"] }
html2text = "0.16.4"
jiff = { version = "0.2.16", features = ["serde"] }
once_cell = "1.21.3"
raw-window-handle = "0.6.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"] }
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.4"

# Article rendering enhancements
syntect = "5.3.0"
scraper = "0.24.0"
textwrap = "0.16.2"

# File watcher for efficient theme reloads
notify = "8.2.0"

# Concurrency & Request Management
dashmap = "6.1.0"
tokio-util = { version = "0.7.17", features = ["rt"] }

[dev-dependencies]
mockito = "1.7.1"
proptest = "1.9.0"
criterion = { version = "0.8.0", features = ["html_reports"] }

[[bench]]
name = "parsing_benchmark"
harness = false
